# csgo_visualizer

./: .gitignore  app.py  flake.nix  new_app.py  pyproject.toml  requirements.txt
.awpy/maps/: map-data.json
.streamlit/: config.toml
page/: __init__.py  action.py  economy.py  home.py  location.py  movement.py  overview.py
parser/: __init__.py  parsers.py
preprocessor/: __init__.py  connections.py  context.py  indexer.py  normalizer.py
transformer/: __init__.py  action.py  coordinate.py  player_stat.py  round_sum.py
utils/: components.py  functions.py  new_components.py  parsers.py  preprocessing.py  symbols.py  transformers.py
visualizer/: __init__.py  action_location.py  action_timeline.py  movement.py  overview.py  round_economy.py
visualizer/logic/: cluster.py  filter.py  pca.py  value_diff.py
