[project]
name = "csgo-visualizer"
version = "0.2.0"
description = "CS2 Match Visualizer"
requires-python = ">=3.11"
dependencies = [
    "awpy>=2.0.2",
    "demoparser>=0.4.0",
    "gdown>=5.2.0",
    "igraph>=0.11.9",
    "leidenalg>=0.10.2",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "polars>=1.31.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.47.0",
]
[tool.setuptools]
packages = [
    "page",
    "parser",
    "visualizer",
    "transformer",
    "preprocessor"
]

